Only use SiteInstance process reuse for ServiceWorker with no failures

This CL ensures we will only attempt to use the SiteInstance process
reuse mechanism when creating a SiteInstance for a ServiceWorker when
the ServiceWorker has not failed to start. Otherwise, we will try to
start it in a brand new process.

BUG=728030

Review-Url: https://codereview.chromium.org/2925623004
Cr-Commit-Position: refs/heads/master@{#477493}

Former-commit-id: 47dc328bb08ac9c66848eeaf68fc8e96a39975cb